--- a/fastly.toml
+++ b/fastly.toml
@@ -6,6 +6,7 @@ description = "An empty application template for the Fastly Compute@Edge environ
 language = "javascript"
 manifest_version = 2
 name = "Empty starter for JavaScript"
+service_id = "o2cDV6TPa9xOZ9MhITIny5"
 
 [scripts]
   build = "npm exec js-compute-runtime ./src/index.js ./bin/main.wasm"
