--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
-    "@fastly/js-compute": "^1.3.2"
+    "@fastly/js-compute": "^1.3.2",
+"@fastly/expressly": "1.0.0-alpha.5"
   }
 }
